Separate sampling from architecture

--- a/classify.ipynb
+++ b/classify.ipynb
@@ -8,7 +8,10 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
+    "\n",
     "from lib.architecture import Search\n",
+    "from lib.sample import SampleNormal\n",
+    "\n",
     "import math"
    ]
   },
@@ -67,26 +70,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Lambda(nn.Module):\n",
-    "    def __init__(self, func):\n",
-    "        super().__init__()\n",
-    "        self.func = func\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        return self.func(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "D = 2\n",
     "H = 5\n",
     "O = 3\n",
     "\n",
-    "split = Lambda(lambda x: (x[..., :H], x[..., H:]))\n",
     "normalize = nn.LayerNorm(H)\n",
     "\n",
     "encoder = nn.Sequential(\n",
@@ -98,17 +85,18 @@
     "search = Search(\n",
     "    transition=nn.Sequential(\n",
     "        nn.Linear(H, 2*H),\n",
-    "        nn.ReLU(),\n",
-    "        split,\n",
+    "        nn.ReLU()\n",
     "    ),\n",
     "    fitness=nn.Sequential(\n",
     "        nn.Linear(H, H),\n",
     "        nn.ReLU(),\n",
     "        nn.Linear(H, 1),\n",
     "    ),\n",
-    "    normalization=normalize,\n",
-    "    max_depth=2, \n",
-    "    max_width=8, \n",
+    "    sample=nn.Sequential(\n",
+    "        SampleNormal(H, num_samples=8),\n",
+    "        normalize\n",
+    "    ),\n",
+    "    max_depth=2,\n",
     "    beam_width=8\n",
     ")\n",
     "\n",
@@ -206,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
