--- a/states.ipynb
+++ b/states.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "from lib.architecture import Search"
+    "\n",
+    "from lib.architecture import Search\n",
+    "from lib.sample import SampleNormal"
    ]
   },
   {
@@ -38,45 +40,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Lambda(nn.Module):\n",
-    "    def __init__(self, func):\n",
-    "        super().__init__()\n",
-    "        self.func = func\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        return self.func(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "split = Lambda(lambda x: (x[..., :H], x[..., H:]))\n",
-    "normalize = nn.LayerNorm(H)\n",
-    "\n",
     "def create_model():\n",
     "    encoder = nn.Sequential(\n",
     "        nn.Linear(D, H),\n",
     "        nn.ReLU(),\n",
-    "        normalize\n",
+    "        nn.LayerNorm(H)\n",
     "    )\n",
     "\n",
     "    search = Search(\n",
     "        transition=nn.Sequential(\n",
     "            nn.Linear(H, 2*H),\n",
     "            nn.ReLU(),\n",
-    "            split,\n",
     "        ),\n",
     "        fitness=nn.Sequential(\n",
     "            nn.Linear(H, H),\n",
     "            nn.ReLU(),\n",
     "            nn.Linear(H, 1),\n",
     "        ),\n",
-    "        normalization=normalize,\n",
+    "        sample=nn.Sequential(\n",
+    "            SampleNormal(H, num_samples=8),\n",
+    "            nn.LayerNorm(H)\n",
+    "        ),\n",
     "        max_depth=4, \n",
-    "        max_width=8, \n",
     "        beam_width=8\n",
     "    )\n",
     "\n",
@@ -178,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
