Add deterministic Search

--- a/classify.ipynb
+++ b/classify.ipynb
@@ -9,7 +9,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
-    "from lib.architecture import Search\n",
+    "from lib.architecture import RandomizedSearch\n",
     "from lib.sample import SampleNormal\n",
     "\n",
     "import math"
@@ -74,27 +74,26 @@
     "H = 5\n",
     "O = 3\n",
     "\n",
-    "normalize = nn.LayerNorm(H)\n",
-    "\n",
     "encoder = nn.Sequential(\n",
     "    nn.Linear(D, H),\n",
     "    nn.ReLU(),\n",
-    "    normalize\n",
+    "    nn.LayerNorm(H)\n",
     ")\n",
     "\n",
-    "search = Search(\n",
+    "search = RandomizedSearch(\n",
     "    transition=nn.Sequential(\n",
+    "        nn.Linear(H, H),\n",
+    "        nn.ReLU(),\n",
     "        nn.Linear(H, 2*H),\n",
-    "        nn.ReLU()\n",
+    "    ),\n",
+    "    sample=nn.Sequential(\n",
+    "        SampleNormal(H, num_samples=8),\n",
+    "        nn.LayerNorm(H)\n",
     "    ),\n",
     "    fitness=nn.Sequential(\n",
     "        nn.Linear(H, H),\n",
     "        nn.ReLU(),\n",
     "        nn.Linear(H, 1),\n",
-    "    ),\n",
-    "    sample=nn.Sequential(\n",
-    "        SampleNormal(H, num_samples=8),\n",
-    "        normalize\n",
     "    ),\n",
     "    max_depth=2,\n",
     "    beam_width=8\n",
