--- a/states.ipynb
+++ b/states.ipynb
@@ -9,7 +9,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
-    "from lib.architecture import Search\n",
+    "from lib.architecture import RandomizedSearch\n",
     "from lib.sample import SampleNormal"
    ]
   },
@@ -47,7 +47,7 @@
     "        nn.LayerNorm(H)\n",
     "    )\n",
     "\n",
-    "    search = Search(\n",
+    "    search = RandomizedSearch(\n",
     "        transition=nn.Sequential(\n",
     "            nn.Linear(H, 2*H),\n",
     "            nn.ReLU(),\n",
