Add option to reuse parents

--- a/classify.ipynb
+++ b/classify.ipynb
@@ -70,6 +70,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from lib.layers import Residual\n",
+    "from lib.sample import SampleUniform\n",
+    "\n",
+    "\n",
     "D = 2\n",
     "H = 5\n",
     "O = 3\n",
@@ -87,7 +91,7 @@
     "        nn.Linear(H, 2*H),\n",
     "    ),\n",
     "    sample=nn.Sequential(\n",
-    "        SampleNormal(H, num_samples=8),\n",
+    "        SampleUniform(H, num_samples=8),\n",
     "        nn.LayerNorm(H)\n",
     "    ),\n",
     "    fitness=nn.Sequential(\n",
@@ -135,10 +139,13 @@
     "\n",
     "# we use the optim package to apply\n",
     "# ADAM for our parameter updates\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate, weight_decay=lambda_l2) # built-in L2\n",
+    "optimizer = torch.optim.RMSprop(model.parameters(), lr=learning_rate, weight_decay=lambda_l2) # built-in L2\n",
     "\n",
     "# e = 1.  # plotting purpose\n",
     "from torch.utils.data import TensorDataset, DataLoader\n",
+    "\n",
+    "temperature = 3.0\n",
+    "gamma = 0.99\n",
     "\n",
     "with device:\n",
     "    dataset = TensorDataset(X, y)\n",
@@ -146,6 +153,9 @@
     "\n",
     "    # Training\n",
     "    for t in range(100):\n",
+    "        temperature = max(temperature * gamma, 1.0)\n",
+    "        model[1].set_temperature(temperature)\n",
+    "\n",
     "        for batch, targets in data_loader:\n",
     "\n",
     "            # Feed forward to get the logits\n",
@@ -165,12 +175,12 @@
     "            # the backward pass.\n",
     "            optimizer.zero_grad()\n",
     "\n",
-    "            # clip gradient\n",
-    "            # torch.nn.utils.clip_grad_norm_(model.parameters(), 1e-2)\n",
-    "            \n",
     "            # Backward pass to compute the gradient\n",
     "            # of loss w.r.t our learnable params. \n",
     "            loss.backward()\n",
+    "            \n",
+    "            # clip gradient\n",
+    "            torch.nn.utils.clip_grad_norm_(model.parameters(), 1e-2)\n",
     "            \n",
     "            # Update params\n",
     "            optimizer.step()"
