--- a/maze_crossentropy.ipynb
+++ b/maze_crossentropy.ipynb
@@ -162,7 +162,7 @@
     "obs_size = env.observation_space.shape[0]\n",
     "n_actions = env.action_space.n\n",
     "\n",
-    "net = MLP(obs_size, HIDDEN_SIZE, n_actions).to(device)\n",
+    "net = MLP(obs_size, 64, n_actions).to(device)\n",
     "\n",
     "objective = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(params=net.parameters(), lr=0.01)\n",
@@ -260,8 +260,9 @@
     "            nn.GELU(),\n",
     "            nn.Linear(hidden_size, 1),\n",
     "        ),\n",
-    "        max_depth=2,\n",
-    "        beam_width=4\n",
+    "        max_depth=0,\n",
+    "        beam_width=4,\n",
+    "        reuse_parents=False\n",
     "    )\n",
     "\n",
     "    decoder = nn.Sequential(\n",
@@ -329,7 +330,7 @@
     "# net = create_deterministic_model(obs_size, 16, n_actions).to(device)\n",
     "\n",
     "objective = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.AdamW(params=net.parameters(), lr=0.01)\n",
+    "optimizer = optim.Adam(params=net.parameters(), lr=0.01)\n",
     "writer = SummaryWriter(comment=\"-frozenlake-search\")"
    ]
   },
@@ -352,6 +353,8 @@
     "\n",
     "temperature = 3.0\n",
     "gamma = 0.995\n",
+    "\n",
+    "net.search.set_temperature(temperature)\n",
     "\n",
     "with torch.device(device):\n",
     "    for iter_no, batch in enumerate(iterate_batches(env, net, BATCH_SIZE)):\n",
