--- a/states.ipynb
+++ b/states.ipynb
@@ -40,7 +40,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_model():\n",
+    "from lib.sample import SampleUniform\n",
+    "\n",
+    "\n",
+    "def create_model(max_depth, beam_width, num_samples):\n",
     "    encoder = nn.Sequential(\n",
     "        nn.Linear(D, H),\n",
     "        nn.ReLU(),\n",
@@ -49,8 +52,9 @@
     "\n",
     "    search = RandomizedSearch(\n",
     "        transition=nn.Sequential(\n",
-    "            nn.Linear(H, 2*H),\n",
+    "            nn.Linear(H, H),\n",
     "            nn.ReLU(),\n",
+    "            nn.Linear(H, 2*H),\n",
     "        ),\n",
     "        fitness=nn.Sequential(\n",
     "            nn.Linear(H, H),\n",
@@ -58,11 +62,11 @@
     "            nn.Linear(H, 1),\n",
     "        ),\n",
     "        sample=nn.Sequential(\n",
-    "            SampleNormal(H, num_samples=8),\n",
+    "            SampleUniform(H, num_samples=num_samples),\n",
     "            nn.LayerNorm(H)\n",
     "        ),\n",
-    "        max_depth=4, \n",
-    "        beam_width=8\n",
+    "        max_depth=max_depth, \n",
+    "        beam_width=beam_width\n",
     "    )\n",
     "\n",
     "    decoder = nn.Sequential(\n",
@@ -77,10 +81,10 @@
     "\n",
     "    return model\n",
     "\n",
-    "model = create_model()\n",
+    "model = create_model(1, 8, 8)\n",
     "model.to(device)\n",
     "\n",
-    "target = create_model()\n",
+    "target = create_model(100, 8, 8)\n",
     "target.to(device)\n",
     "target.train=False"
    ]
@@ -109,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ITERATIONS = 10_000\n",
+    "ITERATIONS = 200\n",
     "BATCH_SIZE = 100\n",
     "\n",
     "with torch.device(device):\n",
@@ -144,6 +148,51 @@
     "        \n",
     "        # Update params\n",
     "        optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.device(device):\n",
+    "    batch = torch.rand(BATCH_SIZE, D).to(device)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        targets1 = target(batch)\n",
+    "        targets2 = target(batch)\n",
+    "\n",
+    "\n",
+    "    # loss\n",
+    "    loss = criterion(targets1, targets2)\n",
+    "\n",
+    "    # accuracy\n",
+    "    acc = torch.mean(torch.cosine_similarity(targets1, targets2))\n",
+    "\n",
+    "'baseline error', loss.item(), 'accuracy', acc.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.device(device):\n",
+    "    batch = torch.rand(BATCH_SIZE, D).to(device)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        targets1 = target(batch)\n",
+    "        targets2 = model(batch)\n",
+    "\n",
+    "    # loss\n",
+    "    loss = criterion(targets1, targets2)\n",
+    "\n",
+    "    # accuracy\n",
+    "    acc = torch.mean(torch.cosine_similarity(targets1, targets2))\n",
+    "\n",
+    "'learned error', loss.item(), 'learned', acc.item()"
    ]
   }
  ],
