--- a/quantum_mnist.ipynb
+++ b/quantum_mnist.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torch.utils.data import TensorDataset, DataLoader\n",
+    "from torchvision import datasets, transforms\n",
+    "from torch.utils.data import DataLoader\n",
     "\n",
     "import math"
    ]
@@ -24,41 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 1000  # num_samples_per_class\n",
-    "D = 2  # dimensions\n",
-    "C = 3  # num_classes\n",
-    "\n",
-    "X = torch.zeros(N * C, D).to(device)\n",
-    "y = torch.zeros(N * C, dtype=torch.long).to(device)\n",
-    "\n",
-    "for c in range(C):\n",
-    "    index = 0\n",
-    "    t = torch.linspace(0, 1, N)\n",
-    "    # When c = 0 and t = 0: start of linspace\n",
-    "    # When c = 0 and t = 1: end of linpace\n",
-    "    # This inner_var is for the formula inside sin() and cos() like sin(inner_var) and cos(inner_Var)\n",
-    "    inner_var = torch.linspace(\n",
-    "        # When t = 0\n",
-    "        (2 * math.pi / C) * (c),\n",
-    "        # When t = 1\n",
-    "        (2 * math.pi / C) * (2 + c),\n",
-    "        N\n",
-    "    ) + torch.randn(N) * 0.2\n",
-    "\n",
-    "    for ix in range(N * c, N * (c + 1)):\n",
-    "        X[ix] = t[index] * torch.FloatTensor((\n",
-    "            math.sin(inner_var[index]), math.cos(inner_var[index])\n",
-    "        ))\n",
-    "        y[ix] = c\n",
-    "        index += 1\n",
-    "\n",
-    "print(\"Shapes:\")\n",
-    "print(\"X:\", tuple(X.size()))\n",
-    "print(\"y:\", tuple(y.size()))"
+    "transform = transforms.Compose([transforms.ToTensor(),\n",
+    "                               transforms.Normalize((0.1307,),(0.3081,))])\n",
+    "train_dataset = datasets.MNIST(root = './MNIST_data', train  = True, download = True, transform = transform)\n",
+    "train_loader = DataLoader(train_dataset, batch_size = 64, shuffle = True, generator=torch.Generator(device))\n"
    ]
   },
   {
@@ -67,74 +41,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "X = X.cpu()\n",
-    "y = y.cpu()\n",
-    "plt.scatter(X[:, 0], X[:, 1], c=y)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from lib.layers import Residual, Unpack\n",
+    "from lib.layers import Residual, UnpackGrid, MultiBatchConv2d\n",
     "from lib.quantumsearch import FitnessFunction, OneToManyNetwork, QuantumSearch\n",
     "from lib.quantumsearch import TransitionFunction\n",
-    "\n",
-    "D = 2\n",
-    "H = 5\n",
-    "O = 3\n",
-    "\n",
     "encoder = nn.Sequential(\n",
-    "    nn.Linear(D, H),\n",
+    "    MultiBatchConv2d(1, 32, 3, 1),\n",
     "    nn.ReLU(),\n",
     ")\n",
-    "\n",
     "search = QuantumSearch(\n",
     "    transition=TransitionFunction(\n",
     "        OneToManyNetwork(\n",
     "            nn.Sequential(\n",
-    "                nn.Linear(H, H),\n",
+    "                MultiBatchConv2d(32, 32, 3),\n",
     "                nn.ReLU(),\n",
-    "                nn.Linear(H, 3*H),\n",
-    "                Unpack(3) # Batch, ...,  3 * H -> Batch, ..., H, 3\n",
+    "                MultiBatchConv2d(32, 3*32,3),   # batch, 3*H, row_p, clo_p\n",
+    "                UnpackGrid(3) # Batch, ...,  3 * H -> Batch, ..., H, 3\n",
     "            )\n",
     "        ),\n",
     "    ),\n",
     "    fitness=FitnessFunction(\n",
     "        OneToManyNetwork(\n",
     "            nn.Sequential(\n",
-    "                nn.Linear(H, H),\n",
+    "                MultiBatchConv2d(32, 32, 3, 1,1),\n",
     "                nn.ReLU(),\n",
-    "                nn.Linear(H, 3),\n",
-    "                Unpack(3) # Batch, ...,  3 * H -> Batch, ..., 1, 3\n",
+    "                MultiBatchConv2d(32, 3, 3, 1,1),\n",
+    "                UnpackGrid(3) # Batch, ...,  3 * H -> Batch, ..., 1, 3\n",
     "            )\n",
     "        ),\n",
     "    ),\n",
-    "    max_depth=3,\n",
+    "    max_depth=5,\n",
     "    beam_width=3,\n",
     "    branching_width=3\n",
     ")\n",
     "\n",
     "decoder = nn.Sequential(\n",
-    "    nn.Linear(H, 3)\n",
+    "   nn.Flatten(1),\n",
+    "   nn.Linear(1152, 10)\n",
     ")\n",
     "\n",
-    "model = nn.Sequential(\n",
-    "    encoder,\n",
-    "    Residual(search),\n",
-    "    decoder\n",
-    ")\n",
-    "\n",
+    "model = nn.Sequential(encoder,\n",
+    "    search,\n",
+    "    decoder)\n",
     "model.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,25 +110,21 @@
     "# ADAM for our parameter updates\n",
     "optimizer = torch.optim.RMSprop(model.parameters(), lr=learning_rate, weight_decay=lambda_l2) # built-in L2\n",
     "\n",
-    "# e = 1.  # plotting purpose\n",
-    "from torch.utils.data import TensorDataset, DataLoader\n",
     "\n",
     "temperature = 3.0\n",
     "gamma = 0.99\n",
-    "X = X.to(device)\n",
-    "y = y.to(device)\n",
+    "\n",
     "with device:\n",
-    "    dataset = TensorDataset(X, y)\n",
-    "    data_loader = DataLoader(dataset, 100, shuffle=True, generator=torch.Generator(device))\n",
+    "\n",
     "\n",
     "    # Training\n",
     "    for t in range(100):\n",
     "\n",
-    "        for batch, targets in data_loader:\n",
+    "        for batch, targets in train_loader:\n",
     "\n",
     "            # Feed forward to get the logits\n",
+    "            batch, targets = batch.to(device), targets.to(device)\n",
     "            y_pred = model(batch)\n",
-    "\n",
     "\n",
     "            # loss\n",
     "            loss = criterion(y_pred, targets)\n",
@@ -195,8 +144,8 @@
     "            # of loss w.r.t our learnable params.\n",
     "            loss.backward()\n",
     "\n",
-    "            # clip gradient\n",
-    "            torch.nn.utils.clip_grad_norm_(model.parameters(), 1e-2)\n",
+    "            # # clip gradient\n",
+    "            # torch.nn.utils.clip_grad_norm_(model.parameters(), 1e-2)\n",
     "\n",
     "            # Update params\n",
     "            optimizer.step()"
